# calculate_map_freespace

./: CMakeLists.txt  readme.md
data/: 1.pgm  10.pgm  12.pgm  13.pgm  14.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/: calculate_map_freespace.cpp  map_beautify.cpp
